--- a/static/main.css
+++ b/static/main.css
@@ -419,35 +419,31 @@ a:hover {
 /* heading  ---------------------------------------------------- */
 .heading__title, .project__title {
   font-family: "Montserrat", sans-serif;
-  font-size: 40px;
+  font-size: 33px;
   color: #222222;
   text-transform: uppercase;
   font-weight: 600;
   margin-bottom: 20px; }
   .heading__title--large {
-    font-size: 60px;
+    font-size: 40px;
     margin-bottom: 40px; }
   .heading__title--white {
     color: #ffffff; }
-  .heading__title__subtitle {
-    font-size: 20px;
-    color: #777777;
-    margin-bottom: 60px; }
-    .heading__title__subtitle--small {
-      font-size: 16px;
-      max-width: 520px; }
-.heading .l-section--banner .heading__subtitle, .heading .l-section--banner .project__description {
+.heading__subtitle, .project__description {
+  font-size: 20px;
+  color: #777777;
+  margin-bottom: 60px; }
+  .heading__subtitle--small {
+    font-size: 16px;
+    max-width: 520px; }
+
+.l-section--banner .heading__subtitle, .l-section--banner .project__description {
   margin-bottom: 60px;
   color: #cccccc; }
-.heading .l-section--offer .heading__subtitle, .heading .l-section--offer .project__description {
+
+.l-section--offer .heading__subtitle, .l-section--offer .project__description {
   margin-bottom: 20px;
   color: #cccccc; }
-@media only all and (max-width: 360px) {
-  .heading {
-    font-size: 33px; } }
-@media only all and (max-width: 360px) {
-  .heading {
-    font-size: 43px; } }
 
 /* project --------------------------------------------------------- */
 .project {
@@ -755,7 +751,12 @@ a:hover {
 /* media-queries  ---------------------------------------------------- */
 @media only screen and (min-width: 370px) {
   .button--menu {
-    padding: 0 30px; } }
+    padding: 0 30px; }
+
+  .heading__title, .project__title {
+    font-size: 40px; }
+    .heading__title--large {
+      font-size: 60px; } }
 @media only screen and (min-width: 640px) {
   .button--menu {
     display: none; }
