Remove redundant properties

--- a/src/main.scss
+++ b/src/main.scss
@@ -86,7 +86,7 @@
 
 
 /* project --------------------------------------------------------- */
-    @import "blocks/project/project.scss";  
+    @import "blocks/project/project";  
 
 
 /* feature --------------------------------------------------------- */
