--- a/src/blocks/project/_project.scss
+++ b/src/blocks/project/_project.scss
@@ -4,13 +4,14 @@
   max-width: 470px;
 
   &__title {
-    @extend .heading__title;
+    font-family: $font-second;
     font-size: $font-size-s;
-    text-align: left;
+    color: $grey-lvl8;
+    text-transform: uppercase;
+    margin-bottom: 20px;
   }
   
   &__description {
-    @extend .heading__subtitle;
     font-size: $font-size-xxs;
     width: 100%;
     max-width: 380px;
