--- a/static/main.css
+++ b/static/main.css
@@ -417,7 +417,7 @@ a:hover {
     color: #222222; }
 
 /* heading  ---------------------------------------------------- */
-.heading__title, .project__title {
+.heading__title {
   font-family: "Montserrat", sans-serif;
   font-size: 33px;
   color: #222222;
@@ -429,7 +429,7 @@ a:hover {
     margin-bottom: 40px; }
   .heading__title--white {
     color: #ffffff; }
-.heading__subtitle, .project__description {
+.heading__subtitle {
   font-size: 20px;
   color: #777777;
   margin-bottom: 60px; }
@@ -437,11 +437,11 @@ a:hover {
     font-size: 16px;
     max-width: 520px; }
 
-.l-section--banner .heading__subtitle, .l-section--banner .project__description {
+.l-section--banner .heading__subtitle {
   margin-bottom: 60px;
   color: #cccccc; }
 
-.l-section--offer .heading__subtitle, .l-section--offer .project__description {
+.l-section--offer .heading__subtitle {
   margin-bottom: 20px;
   color: #cccccc; }
 
@@ -451,8 +451,11 @@ a:hover {
   width: 100%;
   max-width: 470px; }
   .project__title {
+    font-family: "Montserrat", sans-serif;
     font-size: 18px;
-    text-align: left; }
+    color: #222222;
+    text-transform: uppercase;
+    margin-bottom: 20px; }
   .project__description {
     font-size: 14px;
     width: 100%;
@@ -753,7 +756,7 @@ a:hover {
   .button--menu {
     padding: 0 30px; }
 
-  .heading__title, .project__title {
+  .heading__title {
     font-size: 40px; }
     .heading__title--large {
       font-size: 60px; } }
