--- a/src/main.scss
+++ b/src/main.scss
@@ -126,3 +126,7 @@
 
 /* media-queries  ---------------------------------------------------- */
 @import "layout/media-queries"; 
+
+
+/* SHAME  ---------------------------------------------------- */
+@import "global/shame"; 
