Add comment to shame.scss

--- a/src/global/_shame.scss
+++ b/src/global/_shame.scss
@@ -1,4 +1,5 @@
-//Heading
+// Heading
+// Margin bottom under heading__subtitle currently depends on their content
       .l-section--banner .heading__subtitle {
           margin-bottom: 60px;
       }
