--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -17,11 +17,14 @@
 // Portrait orientation
 @media only screen and (min-width: 640px), (orientation: portrait) {
   @include button--menu--potrait;
+  @include header__wrapper--portait;
   @include menu__list--open--portait;
 }
 
 // Large screen size (--large-screen)
 @media only screen and (min-width: 750px) {
+  @include header--large-screen;
+  @include l-section--banner--large-screen;
   @include opinion--large-screen;
 }
 
