--- a/src/blocks/heading/_heading.scss
+++ b/src/blocks/heading/_heading.scss
@@ -8,7 +8,7 @@
     margin-bottom: 20px;
     
     &--large {
-      font-size: $font-size-xl;
+      font-size: 50px;
       margin-bottom: 40px;
     }
     
