Separate copyright block

--- a/src/main.scss
+++ b/src/main.scss
@@ -105,10 +105,11 @@
 /* items-list --------------------------------------------------------- */
     @import "blocks/items-list/items-list";  
 
+/* copyright -------------------------------------------------- */
+    @import "blocks/copyright/copyright";
+
 /* socials ---------------------------------------------------- */
     @import "blocks/socials/socials"; 
-/* __ socials__copyright -------------------------------------------------- */
-    //    @import "blocks/socials/__copyright/socials__copyright.scss";
 /* __ socials__icons -------------------------------------------------- */
 
 /* button  ---------------------------------------------------- */
