Tidy up main.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -61,65 +61,37 @@
 @import "layout/l-features-wrapper/l-features-wrapper.scss"; 
 /* >> l-features-wrapper--top-aligned ---------------------------------------------------- */
     @import "layout/l-features-wrapper/--top-aligned/l-features-wrapper--top-aligned.scss"; 
-/*\
-***
-\*/
+
 /************************************************************************\
-  3# BLOCKS start ########################################################
-\************************************************************************/
-/************************************************************************\
-  # BLOCK --- Header start -----------------------------------------------
+  3# BLOCKS
 \************************************************************************/
 /* header  ---------------------------------------------------- */
-    @import "blocks/header/header.scss"; 
-
+    @import "blocks/header/header"; 
 /* logo  ---------------------------------------------------- */
     @import "blocks/logo/logo"; 
-
 /* menu  ---------------------------------------------------- */
     @import "blocks/menu/menu"; 
-
-
 /* heading  ---------------------------------------------------- */
     @import "blocks/heading/heading"; 
-
-
 /* project --------------------------------------------------------- */
     @import "blocks/project/project";  
-
-
 /* feature --------------------------------------------------------- */
     @import "blocks/feature/feature";  
-
-
 /* list ---------------------------------------------------- */
-    @import "blocks/list/list.scss"; 
-
-
+    @import "blocks/list/list"; 
 /* opinion ---------------------------------------------------- */
     @import "blocks/opinion/opinion"; 
-
 /* partners ---------------------------------------------------- */
     @import "blocks/partners/partners";
-
 /* items-list --------------------------------------------------------- */
     @import "blocks/items-list/items-list";  
-
 /* copyright -------------------------------------------------- */
     @import "blocks/copyright/copyright";
-
 /* socials ---------------------------------------------------- */
     @import "blocks/socials/socials"; 
-/* __ socials__icons -------------------------------------------------- */
-
 /* button  ---------------------------------------------------- */
-    @import "blocks/button/button.scss";  
-/************************************************************************\
-  # BLOCK --- Banner end -------------------------------------------------
-\************************************************************************/
-/*\
-***
-\*/
+    @import "blocks/button/button";  
+
 
 /* media-queries  ---------------------------------------------------- */
 @import "layout/media-queries"; 
