--- a/static/main.css
+++ b/static/main.css
@@ -301,14 +301,8 @@ a:hover {
 @media all and (min-width: 1024px) {
   .l-features-wrapper--top-aligned {
     align-items: flex-start; } }
-/*\
-***
-\*/
 /************************************************************************\
-  3# BLOCKS start ########################################################
-\************************************************************************/
-/************************************************************************\
-  # BLOCK --- Header start -----------------------------------------------
+  3# BLOCKS
 \************************************************************************/
 /* header  ---------------------------------------------------- */
 .header {
@@ -662,7 +656,6 @@ a:hover {
     .socials__icon--twitter:hover {
       background-color: #00aced; }
 
-/* __ socials__icons -------------------------------------------------- */
 /* button  ---------------------------------------------------- */
 .button {
   background-color: transparent;
@@ -730,12 +723,6 @@ a:hover {
       color: #222222;
       text-shadow: none; }
 
-/************************************************************************\
-  # BLOCK --- Banner end -------------------------------------------------
-\************************************************************************/
-/*\
-***
-\*/
 /* media-queries  ---------------------------------------------------- */
 @media only screen and (min-width: 376px) {
   .button--menu {
