Include global partials

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,30 +11,25 @@
 * #2 LAYOUT                                                             |
 *                                                                       |
 * #3 BLOCKS                                                             |
-*   --- Header Block                                                    |
-*      __ Header Elements                                               |
+|
 
 -------------------------------------------------------------------------
 
 
-
+/* Normalize.css */
+@import "../static/normalize"; 
 /* variables  ---------------------------------------------------- */
 @import "variables/variables"; 
 /* mixins  ---------------------------------------------------- */
 @import "mixins/mixins"; 
 /* global  ---------------------------------------------------- */
-@import "global/global.scss"; 
+@import "global/global"; 
 /* preloader  ---------------------------------------------------- */
-@import "global/preloader.scss"; 
+@import "global/preloader"; 
 /************************************************************************\
-  # SETTINGS --- Global end ----------------------------------------------
-\************************************************************************/
-/*\
-***
-\*/
-/************************************************************************\
-  2# LAYOUT start ######################################################
-\************************************************************************/
+
+
+
 /* l-section  ---------------------------------------------------- */
 @import "layout/l-section/l-section.scss"; 
 /* >> l-section--banner -------------------------------------------------- */
@@ -93,7 +88,7 @@
     @import "blocks/button/button";  
 
 
-/* media-queries  ---------------------------------------------------- */
+/* Media Queries  ---------------------------------------------------- */
 @import "layout/media-queries"; 
 
 
