Update file structure

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,32 +1,42 @@
 @charset "UTF-8";
 
-/*
--------------------------------------------------------------------------
-* CONTENTS                                                              |
-*                                                                       |
-* #1 SETTINGS ****                                                      |
-*   --- Global ---                                                      |
-*   --- Normalize.css ---                                               |
-*                                                                       |
-* #2 LAYOUT                                                             |
-*                                                                       |
-* #3 BLOCKS                                                             |
-|
+//-------------------------------------------------------------------------
+// CONTENTS                                                              |
+//                                                                       |
+// #1 Base                                                               |
+//   --- Normalize.css ---                                               |
+//   --- Global ---                                                      |
+//                                                                       |
+// #2 LAYOUT                                                             |
+//                                                                       |
+// #3 BLOCKS  
 
--------------------------------------------------------------------------
+// #  UTILS                                                              |
+//   --- Variables ---                                                   |
+//   --- Mixins ---                                                      |
+//-----------------------------------------------------------------------/
+
+// ----------------------------------------------------------------------
+  // #1 Base - contains global styles, such as resets, typography, colors,  etc.
+// ----------------------------------------------------------------------
+// Normalize.css
+  @import "../static/normalize"; 
+/* global  -------------------------------------------------------------*/
+  @import "base/global"; 
+/* preloader  -----------------------------------------------------------*/
+  @import "base/preloader"; 
+// ----------------------------------------------------------------------
+
+// ----------------------------------------------------------------------
+  // #1 Utils - contains tools and helpers used across the project, such as variables, mixins
+// ----------------------------------------------------------------------
+// variables  -----------------------------------------------------------
+  @import "utils/variables"; 
+// mixins  --------------------------------------------------------------
+  @import "utils/mixins"; 
 
 
-/* Normalize.css */
-@import "../static/normalize"; 
-/* variables  ---------------------------------------------------- */
-@import "variables/variables"; 
-/* mixins  ---------------------------------------------------- */
-@import "mixins/mixins"; 
-/* global  ---------------------------------------------------- */
-@import "global/global"; 
-/* preloader  ---------------------------------------------------- */
-@import "global/preloader"; 
-/************************************************************************\
+
 
 
 
@@ -93,4 +103,4 @@
 
 
 /* SHAME  ---------------------------------------------------- */
-@import "global/shame"; 
+@import "base/shame"; 
