Move _variables partials at the top

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,8 +2,12 @@
 
 //-------------------------------------------------------------------------
 // CONTENTS                                                              |
+//         
+// # 1 UTILS                                                              |
+//   --- Variables ---                                                   |
+//   --- Mixins ---                                                      |
 //                                                                       |
-// #1 Base                                                               |
+// #2 Base                                                               |
 //   --- Normalize.css ---                                               |
 //   --- Global ---                                                      |
 //                                                                       |
@@ -11,21 +15,8 @@
 //                                                                       |
 // #3 BLOCKS  
 
-// #  UTILS                                                              |
-//   --- Variables ---                                                   |
-//   --- Mixins ---                                                      |
-//-----------------------------------------------------------------------/
 
-// ----------------------------------------------------------------------
-  // #1 Base - contains global styles, such as resets, typography, colors,  etc.
-// ----------------------------------------------------------------------
-// Normalize.css
-  @import "../static/normalize"; 
-/* global  -------------------------------------------------------------*/
-  @import "base/global"; 
-/* preloader  -----------------------------------------------------------*/
-  @import "base/preloader"; 
-// ----------------------------------------------------------------------
+//-----------------------------------------------------------------------/
 
 // ----------------------------------------------------------------------
   // #1 Utils - contains tools and helpers used across the project, such as variables, mixins
@@ -34,6 +25,19 @@
   @import "utils/variables"; 
 // mixins  --------------------------------------------------------------
   @import "utils/mixins"; 
+
+/* preloader  -----------------------------------------------------------*/
+  @import "base/preloader"; 
+// ----------------------------------------------------------------------
+
+
+// ----------------------------------------------------------------------
+  // #2 Base - contains global styles, such as resets, typography, colors,  etc.
+// ----------------------------------------------------------------------
+// Normalize.css
+  @import "../static/normalize"; 
+/* global  -------------------------------------------------------------*/
+  @import "base/global"; 
 
 
 
