--- a/src/main.scss
+++ b/src/main.scss
@@ -22,12 +22,12 @@
 //   --- Normalize.css ---                                          |
 //   --- Global ---                                                 |
 //                                                                  |
-// #2 LAYOUT                                                        |
+// #3 LAYOUT                                                        |
 //                                                                  |
-// #3 BLOCKS  
+// #4 BLOCKS                                                        |
+//                                                                  |
+//------------------------------------------------------------------/
 
-
-//-----------------------------------------------------------------------/
 
 // ----------------------------------------------------------------------
   // #1 Abstracts - contains tools and helpers used across the project, such as variables and mixins
