Move header partial to layout folder

--- a/src/main.scss
+++ b/src/main.scss
@@ -45,8 +45,11 @@
 
 
 
-
-
+// ----------------------------------------------------------------------
+  // #3 Layout - contains styling for larger layout components; e.g. nav, header, footer, etc.
+// ----------------------------------------------------------------------
+/* header  ---------------------------------------------------- */
+    @import "layout/header/header"; 
 /* l-section  ---------------------------------------------------- */
 @import "layout/l-section/l-section.scss"; 
 /* >> l-section--banner -------------------------------------------------- */
@@ -77,8 +80,6 @@
 /************************************************************************\
   3# BLOCKS
 \************************************************************************/
-/* header  ---------------------------------------------------- */
-    @import "blocks/header/header"; 
 /* logo  ---------------------------------------------------- */
     @import "blocks/logo/logo"; 
 /* menu  ---------------------------------------------------- */
